2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Copy over the styles/templates to the items
	  from the ComboBox.
	Clicking the ToggleButton should open the dropdown.
	When a ComboBoxItem is autogenerated, we need to store the
	  autogenerated box in DisplayedItem so that we can put its
	  content back later on.

	* ItemsControl.cs: Generate the container only when it's
	  required. When the container is a ContentControl, ensure
	  that the container doesn't try to set the items logical
	  parent.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* ComboBoxItem.cs: MouseUp should result in the popup being
	  closed but the selection is not changed.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* ContentControl.cs: Add the ability to stop ContentControl
	  from automatically setting the LogicalParent when a
	  FrameworkElement is added as the Content.

2009-04-24  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Ensure that the currently selected item is
	  displayed correctly when the popup is not open.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Clicking on ListItems in the combobox popup
	  should close the popup.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Allow popups to use a transparent canvas to
	  catch clicks outside of the popup area. ComboBox uses this
	  to close its popup.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* ComboBoxItem.cs: Removing unnecessary override

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Move the Notify* methods into Selector as both
	  Listbox and ComboBox require the same API.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: FrameworkElements added to an
	  ItemsCollection need to have their logical parent set to the
	  ItemsControl.

2009-04-22  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Add missing nullcheck around access to a
	  templated part.
