@@ -1,5 +1,11 @@
 2009-04-28  Alan McGovern  <amcgovern@novell.com>
 
+	* ItemsControl.cs: Ensure that PrepareContainerForItemOverride
+	  is handling both ContentControls and ContentPresenters
+	  correctly.
+
+2009-04-28  Alan McGovern  <amcgovern@novell.com>
+
 	* ComboBox.cs: Copy over the styles/templates to the items
 	  from the ComboBox.
 	Clicking the ToggleButton should open the dropdown.
